Adding much of the infrastructure for the rest of the presentation

--- a/documents/presentation/presentation.tex
+++ b/documents/presentation/presentation.tex
@@ -2,15 +2,73 @@
 \usepackage[utf8]{inputenc}
 
 \title{R Users Group}
+\subtitle{Intro to Docker - Why and How to Use It}
 \author{David Thole}
 \institute{University of Iowa, College of Pharmacy}
 \date{2019/01/24}
+
+\AtBeginSection[]
+{
+  \begin{frame}
+    \frametitle{Agenda}
+    \tableofcontents[currentsection]
+  \end{frame}
+}
 
 \begin{document}
 \frame{\titlepage}
 
 \begin{frame}
     \frametitle{Agenda}
-    Agenda goes here
+    \tableofcontents
+\end{frame}
+
+\section{1. What is it, how to start using it?}
+\begin{frame}
+    \frametitle{Why use Docker?}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Why use Docker? (System Admin Perspective)}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Why use Docker? (Developer Perspective)}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Why use Docker? (DBA/Analyst Perspective)}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Why use Docker? (Researcher Perspective)}
+\end{frame}
+
+\section{2. How it works}
+\begin{frame}
+    \frametitle{Execution Considerations}
+\end{frame}
+
+\section{3. Basic Usage}
+\begin{frame}
+    \frametitle{Pulling Containers}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Execution Containers}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Building Containers}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Using Multiple Containers}
+\end{frame}
+
+\section{Closing}
+\begin{frame}
+    \frametitle{4. In Closing}
 \end{frame}
 \end{document}
+
