--- a/documents/presentation/presentation.tex
+++ b/documents/presentation/presentation.tex
@@ -91,6 +91,17 @@
 \section{Closing}
 \begin{frame}
     \frametitle{4. In Closing}
+    Resources:
+    \begin{itemize}
+        \item Pluralsight (Docker Path)
+        \item Docker Up \& Running (O'Reilly)
+        \item Dockerhub (best place to look at what's out there)
+    \end{itemize}
+    Useful/Fun Containers:
+    \begin{itemize}
+        \item thedarktrumpet/rstudiojava - Studio, Shiny (For R Use)
+        \item microsoft/mssql-server-linux - Microsoft SQL Server
+        \item jupyter/all-spark-notebook
+    \end{itemize}
 \end{frame}
 \end{document}
-
