--- a/documents/presentation/presentation.tex
+++ b/documents/presentation/presentation.tex
@@ -69,19 +69,29 @@
 \section{2. How it works}
 \begin{frame}
     \frametitle{Execution Considerations}
+    
 \end{frame}
 
 \section{3. Basic Usage}
 \begin{frame}
-    \frametitle{Pulling Containers}
+    \frametitle{Basic Commands}
+    \textcolor{red}{\textbf{Main Command}}: docker \\
+    \textcolor{blue}{\textbf{Script Reference}}: setup.sh \\
+    \textcolor{blue}{\textbf{Script Reference}}: basics.sh
 \end{frame}
 
 \begin{frame}
-    \frametitle{Execution Containers}
+    \frametitle{Running Containers}
+    \textcolor{red}{\textbf{Main Command}}: docker run \\
+    \textcolor{blue}{\textbf{Script Reference (1)}}: interactive.sh \\
+    \textcolor{blue}{\textbf{Script Reference (2)}}: daemon.sh
 \end{frame}
 
 \begin{frame}
     \frametitle{Building Containers}
+    \textcolor{red}{\textbf{Main Command}}: docker build \\
+    \textcolor{blue}{\textbf{Script Reference (1)}}: dotnet/buildme.sh Dockerfile \\
+    \textcolor{blue}{\textbf{Script Reference (2)}}: documents/nbs\_facility/*
 \end{frame}
 
 \begin{frame}
