Adding the HowItWorks graffle image, roughly finishing presentation

--- a/documents/presentation/presentation.tex
+++ b/documents/presentation/presentation.tex
@@ -68,8 +68,8 @@
 
 \section{2. How it works}
 \begin{frame}
-    \frametitle{Execution Considerations}
-    
+    \frametitle{How it works}
+    \includegraphics[width=290px]{images/HowItWorks.png}
 \end{frame}
 
 \section{3. Basic Usage}
@@ -96,6 +96,8 @@
 
 \begin{frame}
     \frametitle{Using Multiple Containers}
+    \textcolor{red}{\textbf{Main Command}}: docker run \\
+    \textcolor{blue}{\textbf{Script Reference (1)}}: multicontainers.sh
 \end{frame}
 
 \section{Closing}
