One last update to the presentation, final for tomorrow

--- a/documents/presentation/presentation.tex
+++ b/documents/presentation/presentation.tex
@@ -100,6 +100,14 @@
     \textcolor{blue}{\textbf{Script Reference (1)}}: multicontainers.sh
 \end{frame}
 
+\begin{frame}
+    \frametitle{Docker Compose}
+    A method for running multiple containers at the same time, that depend on each other, yet are isolated from the default network. \\
+    \textcolor{red}{\textbf{Main Command}}: docker-compose \\
+    \textcolor{blue}{\textbf{Script Reference (1)}}: docker-compose.yml \\
+    \textcolor{blue}{\textbf{Folder Reference (1)}}: compose/*
+\end{frame}
+
 \section{Closing}
 \begin{frame}
     \frametitle{4. In Closing}
